--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.1.4"
